# rustyscript-ls

./: Cargo.toml  README.md
src/: lsp_server.rs  main.rs  ts_bridge.rs
src/providers/: completion.rs  diagnostics.rs  hover.rs
test/: test.ts
