[package]
name = "rustyscript-ls"
version = "0.1.0"
edition = "2021"

[dependencies]
# Asynchronous runtime with multi-threaded support
tokio = { version = "1.28", features = ["rt-multi-thread", "macros", "io-std"] }

# LSP server implementation in Rust
tower-lsp = "0.20.0"

# If bridging to tsserver, you'll want these
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# For bridging or reusing Node-based code, you might spawn child processes
anyhow = "1.0" # Simplified error handling
